--- a/EK2.css
+++ b/EK2.css
@@ -9,11 +9,11 @@ body {
 }
 
 .form-container {
-    background-color: #ebc7c7;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 20px;
     box-shadow: 0 0 10px rgb(0, 0, 0);
-    width: 300px;
+    width: 500px;
     height: 500px;
 }
 
